# hexn

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: build.yml  nix-build.yml  nix.yml
crates/gfx/: CHANGELOG.md  Cargo.toml  build.rs
crates/gfx/src/: buffer.rs  lib.rs  mesh.rs  program.rs  shader.rs  uniform.rs  vertex.rs
crates/io/: Cargo.toml  sdl.h
crates/io/src/: event.rs  lib.rs
crates/math/: Cargo.toml
crates/math/src/: constants.rs  geometry.rs  lib.rs  matrix.rs  num.rs  vector.rs
crates/win/: CHANGELOG.md  Cargo.toml  build.rs
src/: main.rs  no_std.rs
src/shaders/: mvp.vert  rgb_uniform.frag
