[package]
name = "hexen"
version = "0.0.1"

[dependencies]
win = { path = "crates/win", version = "0.0.1" }
gfx = { path = "crates/gfx", version = "0.0.1" }
math = { path = "crates/math", version = "0.0.1" }

[workspace]
members = [ "crates/math", "crates/gfx", "crates/win" ]
resolver = "2"

[features]
std = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[profile.dev]
incremental = true
