[package]
name = "hexn"
version = "0.0.1"

description = "A demo engine in Rust"
authors = [ "Zeno343 <zacheryklinglesmith@gmail.com" ]
license = "MIT"

repository = "https://github.com/Zeno343/hexn.git"
edition = "2021"

[dependencies]
hex_io = { path = "crates/io", version = "^0.0.1" }
hex_gfx = { path = "crates/gfx", version = "^0.0.1" }
hex_math = { path = "crates/math", version = "^0.0.1" }
const_format = "^0.2.32"

[workspace]
members = [ "crates/math", "crates/gfx", "crates/io" ]

[features]
std = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[profile.dev]
incremental = true
