[package]
name = "hex_gfx"
description = "Graphics for hexn"
version = "0.0.1"
authors = [ "Zeno343 <zacheryklinglesmith@gmail.com" ]
repository = "https://github.com/Zeno343/hexn.git"
license = "MIT"

[dependencies]
hex_io = { path = "../io", version = "^0.0.1" }
hex_math = { path = "../math", version = "^0.0.1" }

[build-dependencies]
bindgen = "^0.69.1"
